tests/errors/double_main.err
resolver error: multiple candidates for main function
 ==> ./tests/errors/double_main.tau:1:1
1 |func main() -> int{
  |^^^^^^^^^ first here
...
4 |func main(){
  |^^^^^^^^^ second here
